# SmartNewsOrganizer

./: .gitignore  README.extras.md  README.md  requirements.txt
doc/: README.md  models_and_prices.md  user_manual.md
src/: MANIFEST.in  README.md  pyproject.toml  setup.py  toml_gen.py
src/smart_news_organizer/: README.md  about.py  desktop.py  program.py  tree_data.json
src/smart_news_organizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/smart_news_organizer/modules/: consult.py  data.py  dates.py  feed.py  files.py  images.py  wabout.py  wmessage.py
